--- a/P010416.opf/meta.yml
+++ b/P010416.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010416
+id: P010416
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W20434
   title: གཉན་ཐོག་བྱམས་པ་གླིང་གི་ལོ་རྒྱུས
-  volume: ''
   author: ''
+  volumes: {}
