--- a/P010416.opf/meta.yml
+++ b/P010416.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W20434
   title: གཉན་ཐོག་བྱམས་པ་གླིང་གི་ལོ་རྒྱུས
   author: ''
-  volumes: {}
+  volumes:
+    a467b46341e643c58dfb7fdb9aa7b58e:
+      image_group_id: I5827
+      title: ''
+      volume_number: 1
+      total_pages: 411
