--- a/P010416.opf/layers/v001/Pagination.yml
+++ b/P010416.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 36dd971a0fbe428d991b2b676c8e4e0f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3a3c6d5a16014e3bbd69273f22387828:
