--- a/P010416.opf/meta.yml
+++ b/P010416.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010416
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W20434
   title: གཉན་ཐོག་བྱམས་པ་གླིང་གི་ལོ་རྒྱུས
