--- a/P010416.opf/meta.yml
+++ b/P010416.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010416
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:48:41.221451
 source_metadata:
   id: bdr:W20434
   title: གཉན་ཐོག་བྱམས་པ་གླིང་གི་ལོ་རྒྱུས
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 411
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
